cmake_minimum_required(VERSION 3.16.3)

# TODO: need to special variables to setting config .ld file

#message("" ${FLASH_ORIGIN})
#set(FLASH_ORIGIN 0x8004000)
#message("" ${FLASH_ORIGIN})
#message("${CMAKE_CURRENT_SOURCE_DIR}")

# need to create system envirement variable CMAKE_NONE_EABI_STM32_TOOL_CHAIN
# CMAKE_NONE_EABI_STM32_TOOL_CHAIN : path/to/folder/of/tool_cain
message($ENV{CMAKE_NONE_EABI_STM32_TOOL_CHAIN}) 

set(PROJECT_TARGET SignalerExampleFreeRtos)
set(STM32_CMAKE_TOOLCHAIN_PATH $ENV{CMAKE_NONE_EABI_STM32_TOOL_CHAIN})

set(CMAKE_TOOLCHAIN_FILE "${STM32_CMAKE_TOOLCHAIN_PATH}/stm32-cmake/cmake/stm32_gcc.cmake")
set(STM32_TOOLCHAIN_PATH "${STM32_CMAKE_TOOLCHAIN_PATH}/eabi/bin")
set(STM32_CUBE_G4_PATH "${STM32_CMAKE_TOOLCHAIN_PATH}/STM32CubeG4")
set(FREERTOS_PATH "${STM32_CMAKE_TOOLCHAIN_PATH}/STM32CubeG4/Middlewares/Third_Party/FreeRTOS")

project(${PROJECT_TARGET} C CXX ASM)

#set(CMAKE_INCLUDE_CURRENT_DIR TRUE)

find_package(CMSIS 2 COMPONENTS STM32G473VE REQUIRED)
find_package(HAL COMPONENTS STM32G473VE REQUIRED)
find_package(FreeRTOS COMPONENTS ARM_CM4F REQUIRED)

file(GLOB_RECURSE SRC 
  "${PROJECT_SOURCE_DIR}/Core/Src/*.c"
  "${PROJECT_SOURCE_DIR}/Core/Src/*.cpp"
  "${PROJECT_SOURCE_DIR}/Drivers/*.c"
  "${PROJECT_SOURCE_DIR}/Drivers/*.cpp"
#  "${PROJECT_SOURCE_DIR}/Drivers/*.h"
#  "${PROJECT_SOURCE_DIR}/Drivers/*.hpp"
  )

set(PROJECT_SOURCES
    ${SRC}
    ${STM32_CMAKE_TOOLCHAIN_PATH}/STM32CubeG4/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
)

add_executable(${PROJECT_TARGET} ${PROJECT_SOURCES})

target_include_directories(${PROJECT_TARGET} PRIVATE Core/Inc ${STM32_CMAKE_TOOLCHAIN_PATH}/STM32CubeG4/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2)

target_include_directories(${PROJECT_TARGET} PRIVATE Core/Inc ${PROJECT_SOURCE_DIR}/Drivers)

target_link_libraries(${PROJECT_TARGET} PRIVATE 
FreeRTOS::Timers
FreeRTOS::Heap::4
FreeRTOS::ARM_CM4F 
HAL::STM32::G4::RCC
HAL::STM32::G4::RCCEx
HAL::STM32::G4::GPIO
HAL::STM32::G4::ADC
HAL::STM32::G4::ADCEx
HAL::STM32::G4::DMA 
HAL::STM32::G4::DMAEx
HAL::STM32::G4::EXTI
HAL::STM32::G4::FDCAN
HAL::STM32::G4::IWDG
HAL::STM32::G4::PWR
HAL::STM32::G4::PWREx
HAL::STM32::G4::SPI
HAL::STM32::G4::TIM
HAL::STM32::G4::TIMEx
HAL::STM32::G4::CORTEX
HAL::STM32::G4
CMSIS::STM32::G473xx
#CMSIS::STM32::G473VE 
STM32::NoSys
)

stm32_add_linker_script(${PROJECT_TARGET} PRIVATE G473VE.ld)

# Convert elf to hex and bin
set(APP_HEX_FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_TARGET}.hex)
set(APP_BIN_FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_TARGET}.bin)
add_custom_command(TARGET ${PROJECT_TARGET} POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${PROJECT_TARGET}> ${APP_HEX_FILE}
    COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${PROJECT_TARGET}> ${APP_BIN_FILE}
    COMMENT "Building ${APP_HEX_FILE} \nBuilding ${APP_BIN_FILE}")